# korolev_m_a

korolev_m_a/prj/complex/: CMakeLists.txt  complex.cpp  complex.h  complex.sln  complex.vcxproj  complex.vcxproj.filters  test_complex.cpp
korolev_m_a/prj/complex/complex/: complex.cpp  complex.vcxproj
korolev_m_a/prj/matrix2d/: CMakeLists.txt  matrix2d.cpp  matrix2d.h  matrix2d.vcxproj  matrix2d.vcxproj.filters  test_matrix.cpp
korolev_m_a/prj/nod/: CMakeLists.txt  nod.cpp  nod.sln  nod.vcxproj
korolev_m_a/prj/nod/nod/: nod.cpp  nod.vcxproj  nod.vcxproj.filters
korolev_m_a/prj/rational/: CMakeLists.txt  rational.cpp  rational.h  rational.sln  rational.vcxproj  rational.vcxproj.filters  test_rational.cpp
korolev_m_a/prj/rational/rational/: rational.cpp  rational.h  rational.vcxproj  test_rational.cpp
korolev_m_a/prj/stackArr/: CMakeLists.txt  stackArr.vcxproj  stackArr.vcxproj.filters  stackarr.cpp  stackarr.h  test_stackarr.cpp
korolev_m_a/prj/stackArrType/: stackarr.cpp  stackarr.h  test_stackarr.cpp
korolev_m_a/prj/stacklist/: CMakeLists.txt  stacklist.cpp  stacklist.h  stacklist.vcxproj  stacklist.vcxproj.filters  test_stacklist.cpp
korolev_m_a/prj/vec2d/: CMakeLists.txt  test_vec2d.cpp  vec2d.cpp  vec2d.h  vec2d.vcxproj  vec2d.vcxproj.filters
korolev_m_a/prj/vector/: CMakeLists.txt  test_vector.cpp  vector.cpp  vector.h  vector.vcxproj  vector.vcxproj.filters
korolev_m_a/prj/vectorField/: CMakeLists.txt  vectorField.cpp  vectorField.h
korolev_m_a/prj/vectorField/demo/: CMakeLists.txt  main.cpp
korolev_m_a/prj/vectorField/lib/: CMakeLists.txt  (+4 more)
(+17 files in other folders)
